--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "ympc-utils",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Utilily functions used throughout YOMYPOPCORN apps",
   "main": "index.js",
+  "files": [
+    "index.js"
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/yomypopcorn/yomypopcorn-utils.git"
